--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "qrcode": "^1.4.4",
+    "recipe-scraper": "^1.20.2"
   }
 }
