--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "qrcode": "^1.4.4",
     "recipe-scraper": "^1.20.2"
