--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.19",
     "qrcode": "^1.4.4",
     "recipe-scraper": "^1.20.2"
   }
