--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.19",
     "qrcode": "^1.4.4",
+    "react-bootstrap": "^1.0.1",
     "recipe-scraper": "^1.20.2"
   }
 }
