--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.9.19",
     "qrcode": "^1.4.4",
     "react-bootstrap": "^1.0.1",
+    "recipe-ingredient-parser": "^1.5.6",
     "recipe-scraper": "^1.23.4"
   }
 }
